--- a/css/style.scss
+++ b/css/style.scss
@@ -1,15 +1,21 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Press+Start+2P');
+
 body {
     height: 100%;
     margin: 0;
     overflow: hidden;
-    background-image: url(/img/bg.png);
+    background: url(https://raw.githubusercontent.com/hallgat89/vhs3lock/master/screen.png);
+    /*background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ),url(https://wallpaperaccess.com/full/7948.jpg);*/
     background-repeat: no-repeat;
     background-position:  top;
     background-size: cover;
     font-family: 'Roboto', sans-serif;
     background-attachment: fixed;
 }
+
+$bg-color: #4242e6;
+$glitch-bg-color: $bg-color;
 
 .textas{
         display: inline-grid;
@@ -24,27 +30,18 @@ body {
         width: 100%;
 }
 
-h1{
-    font-size: 10vw;
-    color: #fff;
-    animation: drop 1.5s ease;
-}
-
 a{
+    font-family: 'Press Start 2P', cursive;
     font-size: 2vw;
     color: #fff;
-    padding-left: 20px;
     text-decoration: none;
-    text-shadow: black 2px 2px 20px;
     transition: all 0.3s ease-in-out;
     animation: drop 1.5s ease;
 }
 
 a:hover{
-    color: rgb(211, 211, 211);
-    text-shadow: black 2px 2px 20px;
+    text-shadow: #0000a7 2px 2px;
     transition: all 0.3s ease-in-out;
-
 }
 
 @keyframes drop {
@@ -59,3 +56,108 @@ a:hover{
               transform: translateY(0);
     }
   }
+
+  h1 {
+    font-family: 'Press Start 2P', cursive;
+    display: block;
+    color: #fff;
+    font-size: 6vw;
+    margin: 0.6em 0;
+    font-weight: bold;
+  }
+  
+  .glitch {
+    position: relative;
+    margin: 0 auto;
+  }
+  
+  .glitch::before,
+  .glitch::after {
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    animation-direction: alternate-reverse;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    clip: rect(0, 900px, 0, 0);
+    content: attr(data-text);
+  }
+  
+  .glitch::after {
+    animation-name: glitch-animation;
+    animation-duration: 4s;
+    left: 4px;
+    text-shadow: -1px 0 #ffa800;
+    background: $glitch-bg-color;
+  }
+  
+  .glitch::before {
+    animation-name: glitch-animation-2;
+    animation-duration: 6s;
+    left: -4px;
+    text-shadow: 1px 0 #00d8ff;
+    background: $glitch-bg-color;
+  }
+  
+  @mixin rect($top, $bottom) {
+    clip: rect($top, 9999px, $bottom, 0);
+  }
+  
+  /* Expanded Animations */
+  @keyframes glitch-animation {
+    0% { @include rect(42px, 44px); }
+    5% { @include rect(12px, 59px); }
+    10% { @include rect(48px, 29px); }
+    15.0% { @include rect(42px, 73px); }
+    20% { @include rect(63px, 27px); }
+    25% { @include rect(34px, 55px); }
+    30.0% { @include rect(86px, 73px); }
+    35% { @include rect(20px, 20px); }
+    40% { @include rect(26px, 60px); }
+    45% { @include rect(25px, 66px); }
+    50% { @include rect(57px, 98px); }
+    55.0% { @include rect(5px, 46px); }
+    60.0% { @include rect(82px, 31px); }
+    65% { @include rect(54px, 27px); }
+    70% { @include rect(28px, 99px); }
+    75% { @include rect(45px, 69px); }
+    80% { @include rect(23px, 85px); }
+    85.0% { @include rect(54px, 84px); }
+    90% { @include rect(45px, 47px); }
+    95% { @include rect(37px, 20px); }
+    100% { @include rect(4px, 91px); }
+  }
+  
+  @keyframes glitch-animation-2 {
+    0% { @include rect(65px, 100px); }
+    5% { @include rect(52px, 74px); }
+    10% { @include rect(79px, 85px); }
+    15.0% { @include rect(75px, 5px); }
+    20% { @include rect(67px, 61px); }
+    25% { @include rect(14px, 79px); }
+    30.0% { @include rect(1px, 66px); }
+    35% { @include rect(86px, 30px); }
+    40% { @include rect(23px, 98px); }
+    45% { @include rect(85px, 72px); }
+    50% { @include rect(71px, 75px); }
+    55.0% { @include rect(2px, 48px); }
+    60.0% { @include rect(30px, 16px); }
+    65% { @include rect(59px, 50px); }
+    70% { @include rect(41px, 62px); }
+    75% { @include rect(2px, 82px); }
+    80% { @include rect(47px, 73px); }
+    85.0% { @include rect(3px, 27px); }
+    90% { @include rect(26px, 55px); }
+    95% { @include rect(42px, 97px); }
+    100% { @include rect(38px, 49px); }
+  }
+
+  ul{
+      text-align: center;
+      display: flex;
+      list-style: none;
+  }
+
+  .mygtukai{
+      display: contents;
+}
