--- a/css/style.css
+++ b/css/style.css
@@ -1,83 +1,67 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
-body {
-  height: 100%;
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap");
+html, body {
   margin: 0;
-  overflow: hidden;
-  background-image: url(/img/bg.png);
-  background-repeat: no-repeat;
-  background-position: top;
-  background-size: cover;
-  font-family: 'Roboto', sans-serif;
-  background-attachment: fixed;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 0;
 }
 
-.textas {
-  display: -ms-inline-grid;
-  display: inline-grid;
+body {
+  background: -webkit-gradient(linear, left top, right top, from(#00000071), to(#000000)), url(https://i.imgur.com/mNGvq15.jpg);
+  background: linear-gradient(90deg, #00000071 0%, #000000 100%), url(https://i.imgur.com/mNGvq15.jpg);
+  height: 100vh;
+  /* Try removing this.. */
+  font-family: 'Nunito', sans-serif;
+}
+
+.center {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  text-align: center;
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  width: 100%;
+  height: 90%;
 }
 
-h1 {
-  font-size: 10vw;
+.textas {
+  text-transform: uppercase;
   color: #fff;
-  -webkit-animation: drop 1.5s ease;
-          animation: drop 1.5s ease;
-}
-
-a {
   font-size: 2vw;
+  -webkit-animation: text 0.5s ease-in;
+          animation: text 0.5s ease-in;
+  letter-spacing: 20px;
+  text-align: center;
+  text-shadow: 0px 0px 20px rgba(255, 255, 255, 0.418);
+}
+
+.sub p {
   color: #fff;
-  padding-left: 20px;
-  text-decoration: none;
-  text-shadow: black 2px 2px 20px;
-  -webkit-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-  -webkit-animation: drop 1.5s ease;
-          animation: drop 1.5s ease;
+  text-shadow: 0px 0px 20px #fff;
 }
 
-a:hover {
-  color: lightgray;
-  text-shadow: black 2px 2px 20px;
-  -webkit-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-}
-
-@-webkit-keyframes drop {
+@-webkit-keyframes text {
   0% {
-    opacity: 0;
-    -webkit-transform: translateY(-80px);
-    transform: translateY(-80px);
+    letter-spacing: 0px;
   }
   100% {
-    opacity: 1;
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
+    letter-spacing: 20px;
   }
 }
 
-@keyframes drop {
+@keyframes text {
   0% {
-    opacity: 0;
-    -webkit-transform: translateY(-80px);
-    transform: translateY(-80px);
+    letter-spacing: 0px;
   }
   100% {
-    opacity: 1;
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
+    letter-spacing: 20px;
   }
 }
 /*# sourceMappingURL=style.css.map */
