--- a/css/style.scss
+++ b/css/style.scss
@@ -1,163 +1,47 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Press+Start+2P');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap');
 
-body {
-    height: 100%;
+html,body{
     margin: 0;
-    overflow: hidden;
-    background: url(https://raw.githubusercontent.com/hallgat89/vhs3lock/master/screen.png);
-    /*background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ),url(https://wallpaperaccess.com/full/7948.jpg);*/
-    background-repeat: no-repeat;
-    background-position:  top;
-    background-size: cover;
-    font-family: 'Roboto', sans-serif;
-    background-attachment: fixed;
+    box-sizing: border-box;
+    padding: 0;
 }
 
-$bg-color: #4242e6;
-$glitch-bg-color: $bg-color;
+body{
+    background: linear-gradient(90deg, #00000071 0%, #000000 100%), url(https://i.imgur.com/mNGvq15.jpg);
+    height: 100vh; /* Try removing this.. */
+    font-family: 'Nunito', sans-serif;
+}
+
+.center{
+    display: flex;
+    justify-content: center;
+    flex-flow: column;
+    align-items: center;
+    height: 90%;
+}
 
 .textas{
-        display: inline-grid;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        margin: 0;
-        position: absolute;
-        top: 50%;
-        -ms-transform: translateY(-50%);
-        transform: translateY(-50%);
-        width: 100%;
-}
-
-a{
-    font-family: 'Press Start 2P', cursive;
+    text-transform: uppercase;
+    color: #fff;
     font-size: 2vw;
-    color: #fff;
-    text-decoration: none;
-    transition: all 0.3s ease-in-out;
-    animation: drop 1.5s ease;
+    animation: text 0.5s ease-in;
+    letter-spacing: 20px;
+    text-align: center;
+    text-shadow: 0px 0px 20px rgba(255, 255, 255, 0.418);
 }
 
-a:hover{
-    text-shadow: #0000a7 2px 2px;
-    transition: all 0.3s ease-in-out;
+.sub p{
+    color: #fff;
+    text-shadow: 0px 0px 20px #fff;
 }
 
-@keyframes drop {
-    0% {
-      opacity: 0;
-      -webkit-transform: translateY(-80px);
-              transform: translateY(-80px);
+
+
+@keyframes text{
+    0%{
+        letter-spacing: 0px;
     }
-    100% {
-      opacity: 1;
-      -webkit-transform: translateY(0);
-              transform: translateY(0);
+    100%{
+        letter-spacing: 20px;
     }
-  }
-
-  h1 {
-    font-family: 'Press Start 2P', cursive;
-    display: block;
-    color: #fff;
-    font-size: 6vw;
-    margin: 0.6em 0;
-    font-weight: bold;
-  }
-  
-  .glitch {
-    position: relative;
-    margin: 0 auto;
-  }
-  
-  .glitch::before,
-  .glitch::after {
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
-    animation-direction: alternate-reverse;
-    overflow: hidden;
-    position: absolute;
-    top: 0;
-    clip: rect(0, 900px, 0, 0);
-    content: attr(data-text);
-  }
-  
-  .glitch::after {
-    animation-name: glitch-animation;
-    animation-duration: 4s;
-    left: 4px;
-    text-shadow: -1px 0 #ffa800;
-    background: $glitch-bg-color;
-  }
-  
-  .glitch::before {
-    animation-name: glitch-animation-2;
-    animation-duration: 6s;
-    left: -4px;
-    text-shadow: 1px 0 #00d8ff;
-    background: $glitch-bg-color;
-  }
-  
-  @mixin rect($top, $bottom) {
-    clip: rect($top, 9999px, $bottom, 0);
-  }
-  
-  /* Expanded Animations */
-  @keyframes glitch-animation {
-    0% { @include rect(42px, 44px); }
-    5% { @include rect(12px, 59px); }
-    10% { @include rect(48px, 29px); }
-    15.0% { @include rect(42px, 73px); }
-    20% { @include rect(63px, 27px); }
-    25% { @include rect(34px, 55px); }
-    30.0% { @include rect(86px, 73px); }
-    35% { @include rect(20px, 20px); }
-    40% { @include rect(26px, 60px); }
-    45% { @include rect(25px, 66px); }
-    50% { @include rect(57px, 98px); }
-    55.0% { @include rect(5px, 46px); }
-    60.0% { @include rect(82px, 31px); }
-    65% { @include rect(54px, 27px); }
-    70% { @include rect(28px, 99px); }
-    75% { @include rect(45px, 69px); }
-    80% { @include rect(23px, 85px); }
-    85.0% { @include rect(54px, 84px); }
-    90% { @include rect(45px, 47px); }
-    95% { @include rect(37px, 20px); }
-    100% { @include rect(4px, 91px); }
-  }
-  
-  @keyframes glitch-animation-2 {
-    0% { @include rect(65px, 100px); }
-    5% { @include rect(52px, 74px); }
-    10% { @include rect(79px, 85px); }
-    15.0% { @include rect(75px, 5px); }
-    20% { @include rect(67px, 61px); }
-    25% { @include rect(14px, 79px); }
-    30.0% { @include rect(1px, 66px); }
-    35% { @include rect(86px, 30px); }
-    40% { @include rect(23px, 98px); }
-    45% { @include rect(85px, 72px); }
-    50% { @include rect(71px, 75px); }
-    55.0% { @include rect(2px, 48px); }
-    60.0% { @include rect(30px, 16px); }
-    65% { @include rect(59px, 50px); }
-    70% { @include rect(41px, 62px); }
-    75% { @include rect(2px, 82px); }
-    80% { @include rect(47px, 73px); }
-    85.0% { @include rect(3px, 27px); }
-    90% { @include rect(26px, 55px); }
-    95% { @include rect(42px, 97px); }
-    100% { @include rect(38px, 49px); }
-  }
-
-  ul{
-      text-align: center;
-      display: flex;
-      list-style: none;
-  }
-
-  .mygtukai{
-      display: contents;
 }
