--- a/css/style.css
+++ b/css/style.css
@@ -59,9 +59,11 @@ body {
 @keyframes text {
   0% {
     letter-spacing: 0px;
+    opacity: 0;
   }
   100% {
     letter-spacing: 20px;
+    opacity: 1;
   }
 }
 /*# sourceMappingURL=style.css.map */
